<resources>
    <string name="app_name">IRC</string>
    <string name="send">send</string>
    <string name="server_address_port">Server address:port</string>
    <string name="nick">Nick</string>
    <string name="irc_client">IRC Client</string>
    <string name="password">Password</string>
    <string name="channel">#channel</string>
    <string name="connect">Connect</string>
    <string name="your_message">Your text</string>
    <string name="add_channel">Add Channel</string>
    <string name="delete">Delete</string>
    <string name="forsenlol">#Forsenlol</string>
    <string name="test">TEST</string>
    <string name="settings">settings</string>
    <string name="id_status">id_status</string>
    <string name="nick_status">nick_status</string>
    <string name="pw_status">password_status</string>
    <string name="channel_status">channel_status</string>
    <string name="connect_via_twitch">connect via Twitch</string>
    <string name="edit">edit</string>
    <string name="name_optionally">Name (optionally)</string>
    <string name="server">Server</string>
    <string name="default_port">6667</string>
    <string name="port">Port</string>
    <string name="username">Username</string>
    <string name="use_ssl">Use SSL</string>
    <string name="server_status">Server status</string>
    <string name="username_status">Username status</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="twitch_chat">Twitch Chat</string>
    <string name="emotes">emotes</string>
    <string name="title_activity_settings">Settings</string>


    <!--Settings-->

    <string name="theme">Theme</string>
    <string-array name="pref_theme">
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <string-array name="text_size">
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
    </string-array>

    <string-array name="frequency_entries">
        <item>Always</item>
        <item>1 Day</item>
        <item>3 Days</item>
        <item>7 Days</item>
        <item>14 Days</item>
        <item>Month</item>
        <item>Never</item>
    </string-array>

    <string-array name="frequency_values">
        <item>0</item>
        <item>1</item>
        <item>3</item>
        <item>7</item>
        <item>14</item>
        <item>30</item>
        <item>100500</item>
    </string-array>


    <string-array name="emotes_storage">
        <item>Internal storage</item>
        <item>External storage</item>
    </string-array>

    <string name="title_activity_twitch_stream">TwitchStreamActivity</string>


</resources>
