<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.ifmo.android_2016.irc.LoginActivity">

    <ProgressBar
        android:id="@+id/pbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <EditText
        android:id="@+id/server"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nick"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:hint="@string/server_address_port" />

    <ImageView
        android:id="@+id/server_status"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_above="@id/nick"
        android:layout_toEndOf="@id/server"
        android:contentDescription="@string/id_status" />
    <EditText
        android:id="@+id/nick"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:hint="@string/nick" />

    <ImageView
        android:id="@+id/nick_status"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_above="@id/password"
        android:layout_toEndOf="@id/nick"
        android:contentDescription="@string/nick_status"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <ImageView
        android:id="@+id/password_status"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:contentDescription="@string/pw_status"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/password" />

    <EditText
        android:id="@+id/channel"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/channel"
        android:layout_below="@id/password"
        android:layout_alignStart="@id/password" />


    <ImageView
        android:id="@+id/channel_status"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:contentDescription="@string/channel_status"
        android:layout_below="@id/password"
        android:layout_toEndOf="@id/channel" />

    <Button
        android:id="@+id/connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:layout_below="@id/channel"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
