<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_optionally"
        android:gravity="center" />

    <EditText
        android:id="@+id/channel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/channel"
        android:gravity="center" />


    <CheckBox
        android:id="@+id/use_ssl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/use_ssl"
        android:layout_gravity="center" />

</LinearLayout>