<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/selected_channel"
        android:layout_width="0dp"
        android:layout_height="match_parent"

        android:text="@string/forsenlol"
        android:layout_weight="3"
        style="?attr/buttonStyle" />

    <ImageButton
        android:id="@+id/edit_channel"
        android:layout_width="0dp"
        android:layout_marginLeft="5dp"
        android:contentDescription="@string/edit"
        android:layout_weight="1"
        android:src="@drawable/edit_icon"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/delete_channel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginLeft="5dp"
        android:src="@drawable/delete_icon"
        android:layout_weight="1"
        android:contentDescription="@string/delete" />
</LinearLayout>