<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_chat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="irc.android_2016.ifmo.ru.irc.ChatActivity">

    <TextView
        android:id="@+id/chanel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.26"
        android:gravity="center"
        android:text="@string/forsenlol"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="normal|bold" />

    <ScrollView
        android:id="@+id/scrollv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.66">

        <LinearLayout
            android:id="@+id/messages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/text_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6.14"
            android:hint="@string/your_message" />

        <Button
            android:id="@+id/send"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.52"
            android:background="?attr/colorControlHighlight"
            android:text="@string/send" />

    </LinearLayout>

</LinearLayout>
